<resources>
    <string name="app_name">Inventory</string>
    title_add_product_activity
    <string name="title_add_product_activity">Add product</string>
    <string name="title_detailed_product_activity">Product details</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_supplier_details">Supplier information</string>
    <string name="label_add_product">+</string>
    <string name="label_add_picture">Add picture</string>
    <string name="label_quantity">Quantity: </string>
    <string name="label_price">Price: </string>
    <string name="label_product_name">Product name</string>
    <string name="label_product_quantity">Product quantity</string>
    <string name="label_product_price">Product price</string>
    <string name="label_product_supplier_name">Supplier name</string>
    <string name="label_product_supplier_email">Supplier email</string>
    <string name="label_product_supplier_phone">Supplier phone</string>
    <string name="label_insert_product">Save product</string>
    <string name="label_product_no_details">No details available</string>
    <string name="label_sale_product">Sold item</string>
    <string name="label_receive_product">Received item</string>
    <string name="label_contact_supplier">Contact supplier</string>
    <string name="label_delete_product">Delete product</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="label_sell_item">Sell product</string>
    <string name="label_ok">Ok</string>
    <string name="validate_inputs_product_quantity">Invalid product quantity</string>
    <string name="validate_inputs_product_price">Invalid product price</string>
    <string name="validate_inputs_product_supplier_name">Invalid supplierName name</string>
    <string name="validate_inputs_product_supplier_email">Invalid supplierName email</string>
    <string name="validate_inputs_product_supplier_phone">Invalid supplierName phone</string>
    <string name="validate_inputs_product_picture">No picture provided</string>
    <string name="validate_inputs_ok">All inputs are ok</string>
    <string name="validate_inputs_product_name">Invalid product name</string>
    <string name="msg_new_product_added">New product successfully added</string>
    <string name="msg_email_supplier_subject">Need more </string>
    <string name="msg_email_supplier_body">Please send more </string>
    <string name="msg_click_to_add_product">Click on the + button to add a product</string>
    <string name="msg_permission_call_needed">Phone call permission is needed</string>
    <string name="msg_permission_call_denied">Phone call permission denied</string>
    <string name="msg_permission_storage_needed">Storage permission is needed</string>
    <string name="msg_permission_storage_denied">Storage permission denied</string>
    <string-array name="opt_add_picture">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="opt_contact_supplier">
        <item>Phone</item>
        <item>Email</item>
    </string-array>
</resources>


