<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_product_overall"
    tools:context=".activity.AddProductActivity">

    <EditText
        android:id="@+id/etx_product_name"
        style="@style/txt_product_field"
        android:hint="@string/label_product_name" />

    <EditText
        android:id="@+id/etx_product_quantity"
        style="@style/txt_product_field"
        android:hint="@string/label_product_quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/etx_product_price"
        style="@style/txt_product_field"
        android:hint="@string/label_product_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etx_product_supplier_name"
        style="@style/txt_product_field"
        android:hint="@string/label_product_supplier_name" />

    <EditText
        android:id="@+id/etx_product_supplier_email"
        style="@style/txt_product_field"
        android:hint="@string/label_product_supplier_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etx_product_supplier_phone"
        style="@style/txt_product_field"
        android:hint="@string/label_product_supplier_phone"
        android:inputType="number" />

    <ImageView
        android:id="@+id/imv_product_picture"
        style="@style/imv_product_picture" />

    <LinearLayout style="@style/ll_product_row">

        <Button
            android:id="@+id/btn_add_picture"
            style="@style/btn_product"
            android:text="@string/label_add_picture" />

        <Button
            android:id="@+id/btn_insert_product"
            style="@style/btn_product"
            android:text="@string/label_insert_product" />
    </LinearLayout>

</LinearLayout>
