<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    style="@style/crd_item_container">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_container"
        style="@style/rl_item_container">

        <TextView
            android:id="@+id/txt_product_name"
            style="@style/txt_item_name" />

        <LinearLayout style="@style/ll_item_row"
            android:id="@+id/ll_item_quantity">

            <TextView
                style="@style/txt_item_any_field"
                android:text="@string/label_quantity" />

            <TextView
                android:id="@+id/txt_product_quantity"
                style="@style/txt_item_any_field" />
        </LinearLayout>

        <LinearLayout style="@style/ll_item_row"
            android:id="@+id/ll_item_price"
            android:layout_below="@+id/ll_item_quantity">

            <TextView
                style="@style/txt_item_any_field"
                android:text="@string/label_price" />

            <TextView
                android:id="@+id/txt_product_price"
                style="@style/txt_item_any_field" />
        </LinearLayout>
        <LinearLayout style="@style/ll_item_row"
            android:layout_below="@+id/ll_item_price">
            <Button
                style="@style/btn_product"
                android:layout_below="@+id/ll_item_price"
                android:id="@+id/btn_item_sell"
                android:text="@string/label_sell_item"
                 />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>